--- a/vite-exam-project/index.html
+++ b/vite-exam-project/index.html
@@ -7,20 +7,18 @@
     <title>Vite + TS</title>
   </head>
   <body>
-
     <div class="container">
       <h1>Todo App</h1>
       <form class="todo-form">
-      <input type="text" id="todo-input" placeholder="Enter a todo" />
-      <button type="submit" id="add-todo">Add Todo</button>
+        <input type="text" id="todo-input" placeholder="Add a new todo" />
+        <button type="submit">Add</button>
       </form>
-
-      <p id="error-message" >Please enter a todo item</p>
+      <!-- error handling message : CSS added:: .input-error & #error-message -->
+      <p id="error-message">Please enter a todo item</p>
       <ul class="todo-list" id="todo-list"></ul>
 
-      <input type="color" id="colorPicker" >
+      <input type="color" id="colorPicker" />
     </div>
-
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
