--- a/vite-exam-project/index.html
+++ b/vite-exam-project/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + TS</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
   </head>
   <body>
     <div class="container">
@@ -14,7 +16,7 @@
         <button type="submit">Add</button>
       </form>
       <!-- error handling message : CSS added:: .input-error & #error-message -->
-      <p id="error-message">Please enter a todo item</p>
+      <p id="error-message" style="display: none; color: red;">Please enter a todo item</p>
       <ul class="todo-list" id="todo-list"></ul>
 
       <input type="color" id="colorPicker" />
