--- a/vite-exam-project/index.html
+++ b/vite-exam-project/index.html
@@ -6,22 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + TS</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
   </head>
   <body>
     <div class="container">
       <h1>Todo App</h1>
+      <p style="text-align: end; padding-right: 50px;">PRIORITY</p>
       <form class="todo-form">
         <input type="text" id="todo-input" placeholder="Add a new todo" />
+        <select id="priority-select">
+          <option value="low">Low</option>
+          <option value="medium">Medium</option> <!-- priroity selector  -->
+          <option value="high">High</option>
+        </select>
         <button type="submit">Add</button>
       </form>
       <!-- error handling message : CSS added:: .input-error & #error-message -->
       <p id="error-message" style="display: none; color: red;">Please enter a todo item</p>
       <ul class="todo-list" id="todo-list"></ul>
-
       <input type="color" id="colorPicker" />
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
-
