--- a/vite-exam-project/index.html
+++ b/vite-exam-project/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + TS</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="/src/style.css"> <!-- Include stylesheet -->
   </head>
   <body>
     <div class="container">
@@ -20,9 +21,18 @@
         </select>
         <button type="submit">Add</button>
       </form>
-      <!-- error handling message : CSS added:: .input-error & #error-message -->
+
+      
+      <!-- Filter Buttons Container -->
       <p id="error-message" style="display: none; color: red;">Please enter a todo item</p>
+      <div class="filter-buttons" id="filters">
+       <!-- The filtering buttons will be injected here by JavaScript -->
+     </div>
+
+      <!-- error handling message : CSS added:: .input-error & #error-message -->
       <ul class="todo-list" id="todo-list"></ul>
+
+      
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
