--- a/vite-exam-project/index.html
+++ b/vite-exam-project/index.html
@@ -14,11 +14,13 @@
       <p style="text-align: end; padding-right: 50px;">PRIORITY</p>
       <form class="todo-form">
         <input type="text" id="todo-input" placeholder="Add a new todo" />
+        <!-- priroity selector  -->
         <select id="priority-select">
           <option value="low">Low</option>
-          <option value="medium">Medium</option> <!-- priroity selector  -->
+          <option value="medium">Medium</option> 
           <option value="high">High</option>
         </select>
+        
         <button type="submit">Add</button>
       </form>
 
