Feature: Add clear all completed todos functionality

--- a/bde-project/index.html
+++ b/bde-project/index.html
@@ -24,6 +24,8 @@
         <button type="submit">Add</button>
       </form>
 
+      <!-- Clear Completed Button -->
+      <button id="clear-completed-btn" class="clear-completed-btn">Clear Completed Todos</button>
       
       <!-- Filter Buttons Container -->
       <p id="error-message" style="display: none; color: red;">Please enter a todo item</p>
