Feature: Add dark mode toggle functionality

--- a/bde-project/index.html
+++ b/bde-project/index.html
@@ -11,6 +11,9 @@
   <body>
     <div class="container">
       <h1>Todo App</h1>
+      <!-- Part of Task 2: Toggle between light and dark modes -->
+      <button id="theme-toggle-btn" class="theme-toggle-btn">Toggle Theme</button>
+
       <p style="text-align: end; padding-right: 50px;">PRIORITY</p>
       <form class="todo-form">
         <input type="text" id="todo-input" placeholder="Add a new todo" />
