--- a/bde-project/index.html
+++ b/bde-project/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BDE Project</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="/src/style.css"> <!-- Include stylesheet -->
+    <link rel="stylesheet" href="/src/style.css">
   </head>
   <body>
     <div class="container">
@@ -38,7 +38,6 @@
        <!-- The filtering buttons will be injected here by JavaScript -->
      </div>
 
-      <!-- error handling message : CSS added:: .input-error & #error-message -->
       <ul class="todo-list" id="todo-list"></ul>
 
     </div>
