--- a/bde-project/index.html
+++ b/bde-project/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/src/style.css">
   </head>
   <body>
-    <div class="container">
+    < class="container">
       <div class="header">
         <h1>Todo App</h1>
         <!-- Theme Toggle Button -->
@@ -32,11 +32,14 @@
       <!-- Clear Completed Button -->
       <button id="clear-completed-btn" class="clear-completed-btn">Clear Completed Todos</button>
       
-      <!-- Filter Buttons Container -->
       <p id="error-message" style="display: none; color: red;">Please enter a todo item</p>
+      <!-- Option 4: Filter Buttons -->
       <div class="filter-buttons" id="filters">
-       <!-- The filtering buttons will be injected here by JavaScript -->
-     </div>
+        <label><input type="checkbox" id="filter-low"> Low</label>
+        <label><input type="checkbox" id="filter-medium"> Medium</label>
+        <label><input type="checkbox" id="filter-high"> High</label>
+      </div>
+      
 
       <ul class="todo-list" id="todo-list"></ul>
 
